tests/langs/snapshots/r#mod__langs__base.tf_data-names.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 66
  l: "data \"aws_ami\" \"latest_ubuntu\" {\n"
  m: "                   ^^^^^^^^^^^^^      "
- n: 79
  l: "  ami           = data.aws_ami.latest_ubuntu.id\n"
  m: "                               ^^^^^^^^^^^^^     "
