tests/langs/snapshots/r#mod__langs__base.tf_data-sources.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 62
  l: "data \"aws_ami\" \"latest_ubuntu\" {\n"
  m: "       ^^^^^^^                        "
- n: 75
  l: "  ami           = data.aws_ami.latest_ubuntu.id\n"
  m: "                       ^^^^^^^                   "
