tests/langs/snapshots/r#mod__langs__base.tf_provideer-block.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 12
  l: "  required_providers {\n"
  m: "  ^^^^^^^^^^^^^^^^^^^^^^"
- n: 13
  l: "    aws = {\n"
  m: ^^^^^^^^^^^^^
- n: 14
  l: "      source  = \"hashicorp/aws\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 15
  l: "      version = \"~> 4.0\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 16
  l: "    }\n"
  m: ^^^^^^^
- n: 17
  l: "  }\n"
  m: "^^^  "
- n: 57
  l: "provider \"aws\" {\n"
  m: ^^^^^^^^^^^^^^^^^^^^
- n: 58
  l: "  region = \"us-west-2\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 59
  l: "}\n"
  m: "^  "
