tests/langs/snapshots/r#mod__langs__base.tf_provider-block.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 61
  l: "provider \"aws\" {\n"
  m: ^^^^^^^^^^^^^^^^^^^^
- n: 62
  l: "  region = \"us-west-2\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 63
  l: "}\n"
  m: "^  "
