tests/langs/snapshots/r#mod__langs__base.tf_required_providers.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 13
  l: "    aws = {\n"
  m: "    ^^^^^^^^^"
- n: 14
  l: "      source  = \"hashicorp/aws\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 15
  l: "      version = \"~> 4.0\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 16
  l: "    }\n"
  m: ^^^^^^^
- n: 17
  l: "    github = {\n"
  m: ^^^^^^^^^^^^^^^^
- n: 18
  l: "      source  = \"integrations/github\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 19
  l: "      version = \"~> 5.32.0\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 20
  l: "    }\n"
  m: "^^^^^  "
