tests/langs/snapshots/r#mod__langs__base.tf_resource-types.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 73
  l: "resource \"aws_instance\" \"app_server\" {\n"
  m: "           ^^^^^^^^^^^^                     "
- n: 98
  l: "  value       = aws_instance.app_server.*.id\n"
  m: "                ^^^^^^^^^^^^                  "
- n: 113
  l: "resource \"aws_s3_bucket\" \"app_bucket\" {\n"
  m: "           ^^^^^^^^^^^^^                     "
- n: 119
  l: "resource \"null_resource\" \"template_example\" {\n"
  m: "           ^^^^^^^^^^^^^                           "
- n: 129
  l: "resource \"aws_security_group\" \"web_sg\" {\n"
  m: "           ^^^^^^^^^^^^^^^^^^                 "
- n: 150
  l: "resource \"aws_iam_role\" \"app_role\" {\n"
  m: "           ^^^^^^^^^^^^                   "
- n: 185
  l: "  value       = \"https://${aws_instance.app_server[0].public_dns}\"\n"
  m: "                            ^^^^^^^^^^^^                              "
